--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,41 @@
  Stylesheet for the Hangman game.
  Copyright Ian Maynard -  2017  All rights reserved   
 */
+
+}
+  
+  .tile {
+    width: 100px;
+    height: 100px;
+    border-style: solid;
+    padding: 12px;
+    float: left;
+    margin: 10px;
+  }
+  
+  .tile-buttoncolor {
+    color: yellow;
+  }
+  
+  .fridge-color {
+    color: orange;
+  }
+  
+  #display_area {
+    margin-top: 78px;
+    height: 200px;
+    width: 800px;
+    margin-left: 60px;
+  }
+  
+  #buttons {
+    padding-top: 60px;
+  }
+  
+  #clear {
+    margin-left: 20px;
+    font-size: 25px;
+    color: black;
+    border-style: solid;
+    width: 100px;
+  }
