--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,7 @@
  Copyright Ian Maynard -  2017  All rights reserved   
 */
 
-}
-  
-  .tile {
+   .tile {
     width: 100px;
     height: 100px;
     border-style: solid;
@@ -14,13 +12,10 @@
     margin: 10px;
   }
   
-  .tile-buttoncolor {
+  .tile-color {
     color: yellow;
   }
   
-  .fridge-color {
-    color: orange;
-  }
   
   #display_area {
     margin-top: 78px;
@@ -29,7 +24,7 @@
     margin-left: 60px;
   }
   
-  #buttons {
+  #tile {
     padding-top: 60px;
   }
   
