--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,36 +2,109 @@
  Stylesheet for the Hangman game.
  Copyright Ian Maynard -  2017  All rights reserved   
 */
+*{
+  box-sizing: border-box;
+}  
 
-   .tile {
-    width: 100px;
-    height: 100px;
-    border-style: solid;
-    padding: 12px;
+#tileRow{
+
+align-content: center;
+
+}
+
+
+.header {
+  width:100%;
+  text-align: center;
+  font-family: 'Cormorant SC', serif;
+  font-size: 80px;
+  font-weight: 700px;
+  text-shadow: 2px 4px 4px gray;
+}
+  .letter {
+    font-family: 'Creepster', serif;
+    font-size: 40px;
+    font-weight: 100px;
+    width: 80px;
+    height: 80px;
+    border-width: 0px;
+    border-bottom-width: 1px;
+    padding: 20px;
     float: left;
     margin: 10px;
   }
   
-  .tile-color {
-    color: yellow;
+  .letter-button-color {
+    background-color: black;
+    color:blue;
+    font-family: 'Creepster', serif;
   }
   
-  
-  #display_area {
+
+  #display {
     margin-top: 78px;
-    height: 200px;
-    width: 800px;
+    height: 500px;
+    width: 220px;
     margin-left: 60px;
-  }
+  } 
   
-  #tile {
+  #buttons {
     padding-top: 60px;
+    align-content: center;
+    background-color: black;
   }
-  
+
   #clear {
     margin-left: 20px;
     font-size: 25px;
     color: black;
     border-style: solid;
     width: 100px;
+}
+
+    /* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  /* Margin bottom by footer height */
+  margin: 0 0 100px; 
+  background-color: black;
   }
+
+.footer {
+  clear:both;
+  position: absolute;
+  left:0;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 100px;
+  margin-top: -100px;
+  background-color: gray;
+  padding-top: 20px;
+}
+
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+body > .container {
+  padding: 60px 15px 0;
+}
+.container .text-muted {
+  margin: 20px 0;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+code {
+  font-size: 80%;
+}
